# Based

./: .gitlab-ci.yml  Cargo.toml  README.md  flake.nix  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: com.kylobytes.Based.Devel.json
data/: com.kylobytes.Based.desktop.in.in  com.kylobytes.Based.gschema.xml.in  com.kylobytes.Based.metainfo.xml.in.in
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: window.ui
data/resources/ui/modals/: connection.ui
po/: POTFILES.in
src/: app.rs  application.rs  config.rs  config.rs.in  main.rs  setup.rs  window.rs
src/modals/: about.rs  connection.rs  mod.rs
