[package]
name = "based"
version = "0.1.0"
authors = ["Kent Delante <leftybournes@pm.me>"]
edition = "2021"
publish = false

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
tracing = "0.1"
tracing-subscriber = "0.3"
relm4 = { version = "0.5.0-beta.4", features = ["macros", "libadwaita", "gnome_43"] }