[package]
name = "based"
version = "0.1.0"
authors = ["Kent Delante <leftybournes@pm.me>"]
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.6", package = "gtk4", features = ["v4_8"] }
adw = { version = "0.3", package = "libadwaita", features = ["v1_2"] }
gtk-macros = "0.3"
log = "0.4"
once_cell = "1.14"
pretty_env_logger = "0.4"
