[package]
name = "based"
version = "0.1.0"
authors = ["Kent Delante <leftybournes@pm.me>"]
edition = "2021"

[dependencies]
adw = { version = "0.7", package = "libadwaita", features = ["v1_6"] }
async-compat = "0.2"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_16"] }
gtk-macros = "0.3"
log = "0.4"
once_cell = "1.21"
pretty_env_logger = "0.5"
smol = "2.0"
